tests/reference/asr-template_error_09-8d590f9.stderr
semantic error: Operator undefined for t == t
  --> tests/errors/template_error_09.f90:21:20
   |
21 |             prop = bin(x,y) == bin(y,x)
   |                    ^^^^^^^^^^^^^^^^^^^^ 
